--- a/index.html
+++ b/index.html
@@ -4,6 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Facebook Pixel Code -->
+    <script>
+            !function(f,b,e,v,n,t,s)
+            {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+            n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+            if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+            n.queue=[];t=b.createElement(e);t.async=!0;
+            t.src=v;s=b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t,s)}(window, document,'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+            fbq('init', '909291087894629');
+            fbq('track', 'PageView');
+            fbq('track', 'ViewContent', {
+                content_name: 'Spaceposture-Adv',
+                content_type: 'advertorial'
+            });
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=909291087894629&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Facebook Pixel Code -->
     <title>7 Motivos pelos Quais Esse Kit de Correção Postural Virou uma Febre em 2024</title>
     <style>
         body {
@@ -220,7 +241,9 @@
             <h2 style="font-size: 2.5em; color: #333; margin-bottom: 0.1em; text-align: center;">Space Posture™: transforme sua postura!</h2>
             <img src="https://i.postimg.cc/nrwTGkqr/finalimg.webp" alt="Imagem Showoff" style="width: 100%; max-width: 600px; height: auto;">
             <p style="font-size: 1em; color: #666; margin: 1em 0; text-align:center;">Aproveite um desconto exclusivo e melhore sua postura sem enrolação e sem riscos.</p>
-            <a href="https://www.spaceships.com.br/products/corretor-postural-space%E2%84%A2" style="display: inline-block; padding: 1em 2em; font-size: 1.5em; color: #fff; background-color: #007bff; text-decoration: none; border-radius: 50px; transition: background-color 0.3s;">Obtenha Agora</a>
+            <a href="https://www.spaceships.com.br/products/corretor-postural-space%E2%84%A2" 
+            style="display: inline-block; padding: 1em 2em; font-size: 1.5em; color: #fff; background-color: #007bff; text-decoration: none; border-radius: 50px; transition: background-color 0.3s;" 
+            onclick="fbq('track', 'ClickCTAAdvertorial');">Obtenha Agora</a>
         </div>
 
         <h2>Algumas Avaliações</h2>
