--- a/index.html
+++ b/index.html
@@ -4,27 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Facebook Pixel Code -->
+    <!-- Meta Pixel Code -->
     <script>
-            !function(f,b,e,v,n,t,s)
-            {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-            n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-            if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-            n.queue=[];t=b.createElement(e);t.async=!0;
-            t.src=v;s=b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t,s)}(window, document,'script',
-            'https://connect.facebook.net/en_US/fbevents.js');
-            fbq('init', '909291087894629');
-            fbq('track', 'PageView');
-            fbq('track', 'ViewContent', {
-                content_name: 'Spaceposture-Adv',
-                content_type: 'advertorial'
-            });
+        !function(f,b,e,v,n,t,s)
+        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+        n.queue=[];t=b.createElement(e);t.async=!0;
+        t.src=v;s=b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t,s)}(window, document,'script',
+        'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '3687079121605263');
+        fbq('track', 'PageView');
     </script>
     <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=909291087894629&ev=PageView&noscript=1"
+    src="https://www.facebook.com/tr?id=3687079121605263&ev=PageView&noscript=1"
     /></noscript>
-    <!-- End Facebook Pixel Code -->
+    <!-- End Meta Pixel Code -->
     <title>7 Motivos pelos Quais Esse Kit de Correção Postural Virou uma Febre em 2024</title>
     <style>
         body {
